	* Fixed a typo in the 'README' file.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2020-01-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'compile' to the 'make maintainer-clean' target.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up compiler warnings for glassplayer(1).
	* Cleaned up compiler warnings for glassplayergui(1).
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Changed the format of the 'tone:' scheme to be compliant with the
	host naming requirements in RFC1738.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Debianized the source.
2021-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2021-05-04 Fred Gleason <fredg@paravelsystems.com>
	* Updated the 'make deb' target.
2021-05-21 Fred Gleason <fredg@paravelsystems.com>
	* Split the 'glassplayer' DEB package into 'glassplayer' and
	'glassplayer-gui' packages.
2021-08-17 Alejandro Olivan <alejandro.olivan.alvarez@gmail.com>
	* Add capability to glassplayergui to use glassplayer's JACKD
	capabilities when passed the required parameters. Otherwise its
	functionality is kept intact.
	* Enable glassplayergui to catch and pass '--audio-device' switch to
	glassplayer.
	* Enable glassplayergui to catch and pass '--jack-server-name' switch
	to glassplayer.
	* Enable glassplayergui to catch and pass '--jack-client-name' switch
	to glassplayer.
	* Modify glassplayergui window bar label to show the jackd client
	name when using JACKD audio device, to ease recognition of multiple
	instances.
	* Modify the Metadata Title window bar label from a generic one, to
	one that best matches its coded functionality and comments.
2022-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' to use parallel build.
2022-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.1.